--- a/web/src/locales/ru/translation.json
+++ b/web/src/locales/ru/translation.json
@@ -125,6 +125,7 @@
     "FriendlyNameHint": "Оставьте пустым, чтобы использовать значение по умолчанию.",
     "EnableRutorSearch": "Включить поиск по RuTor",
     "EnableRutorSearchHint": "Поиск торрентов от RuTor, даже если RuTor не доступен. ВНИМАНИЕ: база занимает около 500 МБ в оперативной памяти.",
+    "RutorSearchAddr": "Свой адрес загрузки базы поиска RuTor",
     "PeersListenPort": "Порт для входящих подключений",
     "PeersListenPortHint": "1024 - 65535, 0 - авто",
     "PreloadCache": "Буфер предзагрузки",
