--- a/web/src/locales/ua/translation.json
+++ b/web/src/locales/ua/translation.json
@@ -125,6 +125,7 @@
     "FriendlyNameHint": "Залиште порожнім, щоб використовувати значення за промовчанням.",
     "EnableRutorSearch": "Увімкніть пошук RuTor",
     "EnableRutorSearchHint": "Ви можете шукати торренти от RuTor, навіть якщо RuTor недоступний. УВАГА: Основа займає в оперативної пам'яті близько 500 МБ.",
+    "RutorSearchAddr": "Своя адреса для завантажування файла пошуку RuTor",
     "PeersListenPort": "Порт для вхідних з'єднань",
     "PeersListenPortHint": "1024 - 65535, 0 - авто",
     "PreloadCache": "Буфер попер. завантаження",
