--- a/web/src/locales/en/translation.json
+++ b/web/src/locales/en/translation.json
@@ -21,6 +21,7 @@
   },
   "AddFromLink": "Add Torrent",
   "AddNewTorrent": "Add new torrent",
+  "ApiDocs": "API Docs",
   "B": "B",
   "bps": "bps",
   "Buffer": "Preload Buffer / Cache",
@@ -31,7 +32,7 @@
   "Close": "Close",
   "CloseServer?": "Do you want to turn off server?",
   "CloseServer": "Turn Off",
-  "CopyHash": "Copy Hash",
+  "CopyHash": "Copy Magnet",
   "CopyLink": "Copy link",
   "Data": "Data",
   "DebugMode": "Download priorities",
@@ -66,6 +67,7 @@
   "MB": "MB",
   "Mbps": "Mbps",
   "Name": "Name",
+  "NasReleases": "NAS Releases",
   "NoTorrentsAdded": "No torrents added",
   "Offline": "Offline",
   "OK": "OK",
@@ -112,7 +114,7 @@
     "DisablePEXHint": "Better leave enabled",
     "DisableTCPHint": "Don't disable without μTP enabled",
     "DisableUPNPHint": "Auto-open port on router",
-    "DisableUTPHint": "Not recommended to enable on weak devices",
+    "DisableUTPHint": "Recommended to disable in Windows OS",
     "Disk": "Disk",
     "DLNA": "DLNA Media Server",
     "DontAddRetrackers": "Don`t add retrackers",
@@ -127,7 +129,7 @@
     "EnableRutorSearchHint": "You can search torrents by RuTor, even if the RuTor is not available. NOTE: The database takes about 500 MB of RAM.",
     "RutorSearchAddr": "http address to download file base searching RuTor",
     "PeersListenPort": "Peers Listen Port",
-    "PeersListenPortHint": "1024 - 65535, 0 - auto",
+    "PeersListenPortHint": "1024 - 65535, 0 - random",
     "PreloadCache": "Preload Cache Before Play",
     "ProMode": "PRO mode",
     "RAM": "RAM",
@@ -139,6 +141,12 @@
     "RetrackersMode": "Retrackers Mode",
     "ResetToDefault": "Reset to default",
     "Settings": "Settings",
+    "SslPort": "HTTPS Port",
+    "SslPortHint": "Default: 8091",
+    "SslCert": "SSL Certificate",
+    "SslCertHint": "Path to SSL Certificate",
+    "SslKey": "SSL Key",
+    "SslKeyHint": "Path to SSL Key",
     "TorrentDisconnectTimeout": "Torrent Disconnect Timeout",
     "TorrentsSavePath": "Torrents Save Path",
     "Upload": "Upload",
