--- a/web/src/locales/ru/translation.json
+++ b/web/src/locales/ru/translation.json
@@ -21,6 +21,7 @@
   },
   "AddFromLink": "Добавить",
   "AddNewTorrent": "Добавить новый торрент",
+  "ApiDocs": "Документация API",
   "B": "Б",
   "bps": "бит/c",
   "Buffer": "Предзагрузка / Кеш",
@@ -31,7 +32,7 @@
   "Close": "Закрыть",
   "CloseServer?": "Хотите выключить сервер?",
   "CloseServer": "Выкл. сервер",
-  "CopyHash": "Скопировать хеш",
+  "CopyHash": "Скопировать Magnet",
   "CopyLink": "Копировать",
   "Data": "Данные",
   "DebugMode": "Метки приоритетов",
@@ -66,6 +67,7 @@
   "MB": "МБ",
   "Mbps": "Мбит/c",
   "Name": "Название",
+  "NasReleases": "Релизы для NAS",
   "NoTorrentsAdded": "Нет торрентов",
   "Offline": "Сервер недоступен",
   "OK": "OK",
@@ -112,7 +114,7 @@
     "DisablePEXHint": "Обмен списками участников - не рекомендуется отключать",
     "DisableTCPHint": "Не отключайте без включенного μTP",
     "DisableUPNPHint": "Автоматическая настройка порта на роутере",
-    "DisableUTPHint": "Не рекомендуется включать на слабых устройствах",
+    "DisableUTPHint": "Рекомендуется отключить в ОС Windows",
     "Disk": "ПЗУ / Накопитель",
     "DLNA": "DLNA-медиасервер",
     "DontAddRetrackers": "Ничего не делать",
@@ -139,6 +141,12 @@
     "RetrackersMode": "Ретрекеры",
     "ResetToDefault": "Настройки по умолчанию",
     "Settings": "Настройки",
+    "SslPort": "Порт для HTTPS",
+    "SslPortHint": "По умолчанию: 8091",
+    "SslCert": "SSL Сертификат",
+    "SslCertHint": "Путь к SSL сертификату",
+    "SslKey": "SSL Ключ",
+    "SslKeyHint": "Путь к SSL ключу",
     "TorrentDisconnectTimeout": "Тайм-аут отключения торрента",
     "TorrentsSavePath": "Путь хранения кеша",
     "Upload": "Отдача",
