add ResponsiveMode option

--- a/web/src/locales/ua/translation.json
+++ b/web/src/locales/ua/translation.json
@@ -145,6 +145,7 @@
         "RemoveCacheOnDropDesc": "Якщо виключено, тоді кеш видаляється при видалені торенту.",
         "RemoveRetrackers": "Видалити",
         "ReplaceRetrackers": "Замінити",
+        "ResponsiveMode": "Увімкнути адаптивний режим читання",
         "RetrackersMode": "Ретрекери",
         "ResetToDefault": "Базові налаштування",
         "Settings": "Налаштування",
