--- a/web/src/locales/en/translation.json
+++ b/web/src/locales/en/translation.json
@@ -146,6 +146,7 @@
         "RemoveCacheOnDropDesc": "If disabled, cache removed on delete torrent.",
         "RemoveRetrackers": "Remove retrackers",
         "ReplaceRetrackers": "Replace retrackers",
+        "ResponsiveMode": "Enable responsive reader mode",
         "RetrackersMode": "Retrackers Mode",
         "ResetToDefault": "Reset to default",
         "Settings": "Settings",
